ulang/test/resources/failing/RuntimeException/unbounded-quantifier.u
define foo := forall u. Unbounded u;

// the normalizer should complain about an "unbounded quantifier"
eval foo;
